# lol-performance-review

./: .gitignore  Cargo.toml  build.rs  timelines.json
src/: calculations.rs  endpoints.rs  fetcher.rs  main.rs  ratelimiter.rs  riot_api.rs
src/endpoints/: compare.rs  fetch.rs  mod.rs  stats.rs
src/riot_api/: json.rs  mod.rs
static/: style.css
templates/: compare2.html  fetch.html  index.html  stats.html  topright.html
