[package]
name = "lol-performance-review"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.8.0"
actix-web-lab = "0.20.2"
askama = { version = "0.12.1", features = ["with-actix-web"] }
askama_actix = "0.14.0"
cached = { version = "0.51.4", features = ["async", "disk_store", "proc_macro"] }
chrono = { version = "0.4.38", features = ["serde"] }
dashmap = "6.0.1"
derive_more = "0.99.18"
dotenvy = "0.15.7"
env_logger = "0.11.3"
governor = "0.6.3"
itertools = "0.13.0"
log = "0.4.21"
nonzero_ext = "0.3.0"
ordered-float = "4.2.1"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_with = { version = "3.8.1", features = ["chrono", "json"] }
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.15"
