[package]
name = "lol-performance-review"
version = "0.1.1"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.10.2"
actix-web-lab = "0.24.1"
askama = "0.12.1"
askama_actix = "0.14.0"
cached = { version = "0.55.1", features = ["async", "disk_store", "proc_macro"] }
chrono = { version = "0.4.40", features = ["serde"] }
dashmap = "6.1.0"
derive_more = { version = "2.0.1", features = ["from"] }
dotenvy = "0.15.7"
duration-str = "0.17.0"
env_logger = "0.11.8"
governor = "0.10.0"
itertools = "0.14.0"
log = "0.4.27"
nonzero_ext = "0.3.0"
ordered-float = "5.0.0"
phf = "0.11.3"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = { version = "3.12.0", features = ["chrono", "json"] }
strum = { version = "0.27.1", features = ["derive"] }
test-case = "3.3.1"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.17"

[build-dependencies]
cached = { version = "0.55.1", features = ["disk_store", "proc_macro"] }
derive_more = { version = "2.0.1", features = ["from"] }
itertools = "0.14.0"
phf = "0.11.3"
phf_codegen = "0.11.3"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
